--- a/k8s-deployment/deploy-app/service.yaml
+++ b/k8s-deployment/deploy-app/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: aymen-krypton
+  name: demo-app
 spec:
   type: LoadBalancer
   selector:
-    app: aymen-krypton
+    app: demo-app
   ports:
     - protocol: TCP
       port: 80
